Makes SetFocus() notify callback correctly on failure

SetFocus() may fail in the FocusController and this wasn't being
propagated correctly to the client. This meant the client might think
a window had focus when it didn't.

BUG=600869
TEST=covered by tests
R=ben@chromium.org

Review URL: https://codereview.chromium.org/1868783003

Cr-Commit-Position: refs/heads/master@{#385866}

Former-commit-id: f9b88e631421343f0fd3d695b9cee0b090eb6ac1